--- a/package.json
+++ b/package.json
@@ -13,44 +13,44 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.0.0",
-    "@angular/cdk": "^6.0.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "6.0.0",
     "@angular/compiler": "6.0.0",
     "@angular/core": "6.0.0",
     "@angular/forms": "6.0.0",
     "@angular/http": "6.0.0",
-    "@angular/material": "^6.0.0",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "6.0.0",
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
-    "angular-in-memory-web-api": "^0.6.0",
-    "body-parser": "^1.18.2",
-    "core-js": "^2.5.4",
+    "angular-in-memory-web-api": "^0.6.1",
+    "body-parser": "^1.19.0",
+    "core-js": "^2.6.12",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.1.0",
-    "zone.js": "^0.8.26"
+    "rxjs": "6.3.3",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.6.8",
     "@angular/cli": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/language-service": "6.0.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.103",
-    "codelyzer": "^4.2.1",
-    "concurrently": "^3.5.1",
+    "@types/jasmine": "^2.8.18",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^6.14.13",
+    "codelyzer": "^4.5.0",
+    "concurrently": "^3.6.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "webpack-bundle-analyzer": "^2.13.1"
   }
 }
